[package]
name = "sim-app"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1.39", features = ["rt-multi-thread", "macros", "sync", "time", "net", "signal"] }
tonic = { version = "0.12", features = ["transport"] }
prost = "0.13"
tokio-stream = { version = "0.1", features = ["sync"] }
futures-core = "0.3"
sim_proto = { package = "sim-proto", path = "../sim-proto" }
crossbeam = "0.8"