[package]
name = "client"
authors = ["Martin Starkov"]
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
anyhow = { workspace = true }
crossbeam-channel = { workspace = true }
futures = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tonic = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
tracing = { workspace = true }
interface = { workspace = true }
server = { workspace = true }
simulator = { workspace = true }
