[package]
name = "interface"
authors = ["Martin Starkov"]
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
publish = false
build = "build.rs"

[dependencies]
anyhow = { workspace = true }
tonic = { workspace = true }
prost = { workspace = true }

[build-dependencies]
protoc-bin-vendored = "3"
tonic-build = "0.12"
