[package]
name = "visualizer"
authors = ["Martin Starkov"]
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
bevy = { version = "0.17", default-features = true }
anyhow = { workspace = true }
crossbeam-channel = { workspace = true }
interface = { workspace = true }
bridge = { workspace = true }
simulator = { workspace = true }